--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "redux-form": "^8.3.7",
     "redux-thunk": "^2.3.0",
     "sass": "^1.42.1",
+    "toastr": "^2.1.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
