--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "history": "^5.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-input-slider": "^6.0.1",
     "react-redux": "^7.2.5",
     "react-router": "^5.2.1",
     "react-scripts": "4.0.3",
