--- a/bot/package.json
+++ b/bot/package.json
@@ -1,5 +1,6 @@
 {
   "name": "slackbot",
+  "type": "module",
   "version": "1.0.0",
   "description": "slack bot",
   "main": "app.js",
@@ -10,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@slack/bolt": "^3.7.0",
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "node-fetch": "^3.0.0"
   }
 }
