--- a/bot/package.json
+++ b/bot/package.json
@@ -13,5 +13,12 @@
     "@slack/bolt": "^3.7.0",
     "dotenv": "^10.0.0",
     "node-fetch": "^3.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.1"
   }
 }
