--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -15,6 +15,7 @@ jobs:
           url: ${{ secrets.FTP_URL }}
           user: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
+          syncroot: /backend
           options: "--auto-init --force"
       - name: ⬆ Migrate
         uses: wei/wget@v1
