--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,14 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.22.0",
     "classnames": "^2.3.1",
+    "form-data": "^4.0.0",
     "history": "^5.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-input-slider": "^6.0.1",
     "react-redux": "^7.2.5",
     "react-router": "^5.2.1",
+    "react-router-dom": "^6.0.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "redux-form": "^8.3.7",
