Specify max line length

--- a/bot/.eslintrc.json
+++ b/bot/.eslintrc.json
@@ -17,6 +17,7 @@
         "padded-blocks": "off",
         "brace-style": ["error", "stroustrup", { "allowSingleLine": true }],
         "no-multiple-empty-lines": ["error", { "max": 2, "maxEOF": 0 }],
-        "space-before-function-paren": "off"
+        "space-before-function-paren": "off",
+        "max-len": ["error", { "code": 80 }]
     }
 }
