--- a/bot/package.json
+++ b/bot/package.json
@@ -10,11 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/plugin-syntax-top-level-await": "^7.14.5",
     "@slack/bolt": "^3.7.0",
     "dotenv": "^10.0.0",
     "node-fetch": "^3.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.0",
+    "@babel/eslint-parser": "^7.16.0",
     "eslint": "^8.2.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.25.2",
