--- a/bot/.eslintrc.json
+++ b/bot/.eslintrc.json
@@ -9,8 +9,7 @@
     "parser": "@babel/eslint-parser",
     "parserOptions": {
         "ecmaVersion": 12,
-        "sourceType": "module",
-        "babelOptions": { "configFile": "./.babelrc" }
+        "sourceType": "module"
     },
     "rules": {
         "semi": ["error", "always"],
