--- a/bot/package.json
+++ b/bot/package.json
@@ -9,6 +9,9 @@
   },
   "author": "",
   "license": "ISC",
+  "babel": {
+    "plugins": ["@babel/plugin-syntax-top-level-await"]
+  },
   "dependencies": {
     "@babel/plugin-syntax-top-level-await": "^7.14.5",
     "@slack/bolt": "^3.7.0",
