--- a/bot/.eslintrc.json
+++ b/bot/.eslintrc.json
@@ -9,6 +9,7 @@
     "parser": "@babel/eslint-parser",
     "parserOptions": {
         "ecmaVersion": 12,
+        "requireConfigFile": false,
         "sourceType": "module"
     },
     "rules": {
